@@ -4,8 +4,8 @@ class dl_1fichier_com extends Download
 {
     public function CheckAcc($cookie)
     {
-        $data = $this->lib->curl("https://1fichier.com/en/console/abo.pl", $cookie, "");
-        if (stristr($data, "offer subscription is valid")) {
+        $data = $this->lib->curl("https://1fichier.com/console/abo.pl", $cookie, "");
+        if (stristr($data, "subscription is valid until")) {
             return array(true, "Until " . $this->lib->cut_str($data, '<span style="font-weight:bold">', '</span>'));
         } elseif (stristr($data, ">Identification")) {
             return array(false, "accinvalid");
@@ -16,7 +16,7 @@ class dl_1fichier_com extends Download
 
     public function Login($user, $pass)
     {
-        $data = $this->lib->curl("https://1fichier.com/en/login.pl", "", "mail={$user}&pass={$pass}&lt=on&Login=Login");
+        $data = $this->lib->curl("https://1fichier.com/login.pl", "", "mail={$user}&pass={$pass}&lt=on&Login=Login");
         $cookie = $this->lib->GetCookies($data);
 
         return array(true, $cookie);
@@ -25,10 +25,18 @@ class dl_1fichier_com extends Download
     public function Leech($url)
     {
         $data = $this->lib->curl($url, $this->lib->cookie, "");
-        if (stristr($data, "The requested file could not be found")) {
+        if (stristr($data, 'Premium status must not be used on professional services')) {
+            $this->error("blockIP", true, false);
+        } elseif (stristr($data, "The requested file could not be found")) {
             $this->error("dead", true, false, 2);
         } elseif ($this->isRedirect($data)) {
             return trim($this->redirect);
+        } elseif (preg_match('/<form accept-charset="UTF-8"[^>]*action="([^"]+)"/i', $data, $matches)) {
+            $urlDownload = trim($matches[1]);
+            $data = $this->lib->curl($urlDownload, $this->lib->cookie, "did=0");
+            if ($this->isRedirect($data)) {
+                return trim($this->redirect);
+            }
         }
 
         return false;
@@ -40,5 +48,5 @@ class dl_1fichier_com extends Download
  * New Vinaget by LTT
  * Version: 3.3 LTS
  * 1fichier.com Download Plugin
- * Date: 10.09.2018
+ * Date: 06.05.2025
  */
