@@ -1,15 +1,24 @@
 <?php
 
-class dl_katfile_com extends Download
+class dl_filextras_com extends Download
 {
 
     public function CheckAcc($cookie)
     {
-        $data = $this->lib->curl("https://katfile.com/?op=my_account", "lang=english;{$cookie}", "");
+        $data = $this->lib->curl("https://filextras.com/?op=my_account", "lang=english;{$cookie}", "");
+        $traffic_available = "";
+        if (stristr($data, '<span>Traffic available</span>')) {
+            $traffic = $this->lib->cut_str($data, 'traffic position-relative">', '</div>');
+            if (preg_match('/<sup>\s*(MB)\s*<\/sup>\s*(\d+)/i', $traffic, $matches)) {
+                $traffic_available = '<br/>Traffic available: ' . $matches[2] . ' ' . $matches[1];
+            }
+        }
         if (stristr($data, 'Premium Pro account expire')) {
-            return array(true, "Until " . $this->lib->cut_str($data, '<TD>Premium Pro account expire</TD><TD><b>', '</b>'));
+            $time = $this->lib->cut_str($data, 'Premium Pro account expire:', '</div>');
+            return array(true, "Until " . $this->lib->cut_str($time, '<b>', '</b>')  . $traffic_available);
         } elseif (stristr($data, 'Premium account expire')) {
-            return array(true, "Until " . $this->lib->cut_str($data, '<TD>Premium account expire</TD><TD><b>', '</b>'));
+            $time = $this->lib->cut_str($data, 'Premium account expire:', '</div>');
+            return array(true, "Until " . $this->lib->cut_str($data, '<b>', '</b>') . $traffic_available);
         } elseif (stristr($data, 'My affiliate link')) {
             return array(false, "accfree");
         } else {
@@ -19,7 +28,7 @@ class dl_katfile_com extends Download
 
     public function Login($user, $pass)
     {
-        $data = $this->lib->curl("https://katfile.com/", "lang=english", "op=login&login={$user}&password={$pass}&redirect=");
+        $data = $this->lib->curl("https://filextras.com/", "lang=english", "op=login&login={$user}&password={$pass}&redirect=");
         $cookie = "lang=english;{$this->lib->GetCookies($data)}";
         return array(true, $cookie);
     }
@@ -34,8 +43,8 @@ class dl_katfile_com extends Download
             $data = $this->lib->curl($url, $this->lib->cookie, $post);
             if (stristr($data, 'Wrong password')) {
                 $this->error("wrongpass", true, false, 2);
-            } elseif (preg_match('@https?:\/\/www\d+\.katfile.com\/d\/[^\'\"\s\t<>\r\n]+@i', $data, $link)) {
-                return trim(str_replace('https', 'http', $link[0]));
+            } elseif (preg_match('@(?:https?:)?//[a-z0-9\-\.]+\.filextras\.com(?::\d+)?/d/[^\'\"\s<>\r\n]+@i', $data, $link)) {
+                return "https:" . trim($link[0]);
             }
         }
         if (stristr($data, 'type="password" name="password')) {
@@ -47,7 +56,13 @@ class dl_katfile_com extends Download
         } elseif (stristr($data, 'reached the download-limit')) {
             $this->error($this->lib->cut_str($data, '<div class="panel-body">', '</div>'), true, false, 2);
         } elseif (!$this->isRedirect($data)) {
-            $this->error("Please enable direct download in katfile account", true, false, 2);
+            $post = $this->parseForm($this->lib->cut_str($data, '<form', '</form>'));
+            $data = $this->lib->curl($url, $this->lib->cookie, $post);
+            if (preg_match('@(?:https?:)?//[a-z0-9\-\.]+\.filextras\.com(?::\d+)?/d/[^\'\"\s<>\r\n]+@i', $data, $link)) {
+                return "https:" . trim($link[0]);
+            } else {
+                $this->error("Please enable direct download in filextras account", true, false, 2);
+            }
         } else {
             return $this->redirect;
         }
@@ -60,6 +75,6 @@ class dl_katfile_com extends Download
  * Open Source Project
  * New Vinaget by LTT
  * Version: 3.3 LTS
- * Katfile.com Download Plugin
- * Date: 31.01.2025
+ * Filextras.com Download Plugin
+ * Date: 16.06.2025
  */
